# football-analytics-platform

./: .basicprompt.md  .gitignore  .masterprompt.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REMINDERS.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/match/: page.tsx
client/src/app/profile/: page.tsx
client/src/app/scouting/: page.tsx
client/src/app/settings/: page.tsx
client/src/app/shortlist/: page.tsx
client/src/app/world/: page.tsx
client/src/components/dashboard/: MarketValueChart.tsx  StatCard.tsx  TrendInsights.tsx
client/src/components/layout/: Navbar.tsx
client/src/lib/: assets.ts  competition_logos.json  team_logos.json  world-data.ts
client/src/store/: useUserStore.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  STACK.md  TODO.md
docs/architecture/: README.md
docs/backend/: README.md  schema.md
docs/data-science/: MASTER_DATA_DICTIONARY.md  README.md  archetypes.md  market-valuation.md  metrics.md  scoring-logic.md  stats_categories.md
docs/frontend/: README.md  structure.md
docs/reviews/: architecture_audit.md
docs/user-guides/: README.md
scripts/: bump-version.js
scripts/scrapers/: team_logos.py
server/: .env.example  README.md  pyproject.toml
server/app/: main.py
server/app/data/: archetypes.json
server/tests/: conftest.py
(+11 files in other folders)
